Bug 2987 - Fixed mac native scrollbars by porting latest global skin from trunk - r=mig
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@4751 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/global/browser.css
+++ b/app/skin/global/browser.css
@@ -97,6 +97,7 @@
 
 .tabbrowser-tab > .tab-image-middle {
   background: url("chrome://global/skin/tab-middle.png") repeat-x;
+  -moz-box-flex: 0 !important;
 }
 
 .tabbrowser-tab:not([selected="true"]) > .tab-image-middle {
@@ -143,6 +144,7 @@
 }
 
 .tabbrowser-tabs {
+  -moz-binding: url("chrome://global/skin/globalBindings.xml#tabbrowser-tabs");
   border: none;
   padding: 0;
   margin: 0;
